--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 APP_ID=1064753199166271499
 GUILD_ID=<YOUR_GUILD_ID>
-DISCORD_TOKEN=MTA2NDc1MzE5OTE2NjI3MTQ5OQ.G75bmT.zG-u04JnaVOIyqyZT5LjMbF8TolAnazkcWsLiI
+DISCORD_TOKEN=<replaced key>MTA2NDc1MzE5OTE2NjI3MTQ5OQ.G75bmT.zG-u04JnaVOIyqyZT5LjMbF8TolAnazkcWsLiI
 PUBLIC_KEY=<YOUR_PUBLIC_KEY>
