--- a/package.json
+++ b/package.json
@@ -1,35 +1,130 @@
 {
-  "name": "getting-started",
+  "name": "lpap",
   "version": "1.0.0",
   "description": "lpap.app in development",
-  "main": "app.js",
-  "type": "module",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "author": "Shay DeWael",
-  "license": "MIT",
+  "main": "index.js",
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "anymatch": "^3.1.3",
+    "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.1",
+    "braces": "^3.0.2",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "data-uri-to-buffer": "^4.0.1",
+    "debug": "^2.6.9",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "discord-api-types": "^0.37.28",
     "discord-interactions": "^3.2.0",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "node-fetch": "^3.2.3"
+    "dotenv": "^16.0.3",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.2",
+    "fast-deep-equal": "^3.1.3",
+    "fetch-blob": "^3.2.0",
+    "file-type": "^18.2.0",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "formdata-polyfill": "^4.0.10",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.2.0",
+    "glob-parent": "^5.1.2",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.3",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "ignore-by-default": "^1.0.1",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "lodash": "^4.17.21",
+    "lodash.snakecase": "^4.1.1",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^3.3.0",
+    "nodemon": "^2.0.20",
+    "normalize-path": "^3.0.0",
+    "object-inspect": "^1.12.3",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "peek-readable": "^5.0.0",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^3.6.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "readdirp": "^3.6.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^5.7.1",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "simple-update-notifier": "^1.1.0",
+    "statuses": "^2.0.1",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
+    "strtok3": "^7.0.0",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "token-types": "^5.0.1",
+    "touch": "^3.1.0",
+    "ts-mixer": "^6.0.2",
+    "tslib": "^2.4.1",
+    "tweetnacl": "^1.0.3",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "undici": "^5.15.1",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "web-streams-polyfill": "^3.2.1",
+    "ws": "^8.12.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "directories": {
-    "example": "examples"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Nuozrok/lpap.git"
   },
-  "keywords": [
-    "lol"
-  ],
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nuozrok/lpap/issues"
   },
