--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "lpap.app in development",
   "main": "index.js",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.2.0",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
