--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
     "web-streams-polyfill": "^3.2.1",
-    "ws": "^8.12.0"
+    "ws": "^8.12.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -130,4 +131,3 @@
   },
   "homepage": "https://github.com/Nuozrok/lpap#readme"
 }
-
