--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "ws": "^8.12.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet, maybe we should make one...\""
   },
   "repository": {
     "type": "git",
