--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   deploy:
     name: Deploy
-
+    runs-on: ubuntu-latest
+    steps:
     - name: SSH
       uses: appleboy/ssh-action@v.0.1.8
       with:
