--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "lpap.app in development",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.14.0",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
@@ -35,6 +37,7 @@
     "express": "^4.18.2",
     "fast-deep-equal": "^3.1.3",
     "fetch-blob": "^3.2.0",
+    "ffmpeg-static": "^5.1.0",
     "file-type": "^18.2.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
@@ -57,6 +60,7 @@
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
+    "libsodium-wrappers": "^0.7.11",
     "lodash": "^4.17.21",
     "lodash.snakecase": "^4.1.1",
     "media-typer": "^0.3.0",
@@ -93,6 +97,7 @@
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.4",
     "simple-update-notifier": "^1.1.0",
+    "sodium": "^3.0.2",
     "statuses": "^2.0.1",
     "streamsearch": "^1.1.0",
     "string_decoder": "^1.3.0",
@@ -130,4 +135,3 @@
   },
   "homepage": "https://github.com/Nuozrok/lpap#readme"
 }
-
