--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.14.0",
+    "@distube/soundcloud": "^1.3.0",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
@@ -29,6 +32,7 @@
     "discord-api-types": "^0.37.28",
     "discord-interactions": "^3.2.0",
     "discord.js": "^14.7.1",
+    "distube": "^4.0.3",
     "dotenv": "^16.0.3",
     "ee-first": "^1.1.1",
     "encodeurl": "^1.0.2",
@@ -118,7 +122,8 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
     "web-streams-polyfill": "^3.2.1",
-    "ws": "^8.12.0"
+    "ws": "^8.12.0",
+    "ytdl-core": "^4.11.2"
   },
   "scripts": {
     "test": "echo \"No tests yet, maybe we should make one...\""
