--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
           git checkout main
           git pull
           npm install
+          npm update
           node deploy-commands.js
           pm2 start index.js --name lpap-bot
 
