--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.15.0",
-    "@distube/soundcloud": "^1.3.0",
-    "@distube/spotify": "^1.5.1",
+    "@distube/soundcloud": "^0.1.2",
+    "@distube/spotify": "^0.1.0",
     "@distube/yt-dlp": "^1.1.3",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
@@ -23,7 +23,7 @@
     "chokidar": "^3.5.3",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
-    "cookie": "^0.5.0",
+    "cookie": "^1.0.2",
     "cookie-signature": "^1.0.6",
     "data-uri-to-buffer": "^4.0.1",
     "debug": "^2.6.9",
@@ -54,6 +54,7 @@
     "has-flag": "^3.0.0",
     "has-symbols": "^1.0.3",
     "http-errors": "^2.0.0",
+    "husky": "^9.1.7",
     "iconv-lite": "^0.4.24",
     "ieee754": "^1.2.1",
     "ignore-by-default": "^1.0.1",
@@ -76,7 +77,7 @@
     "negotiator": "^0.6.3",
     "node-domexception": "^1.0.0",
     "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.7",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.12.3",
     "on-finished": "^2.4.1",
@@ -96,12 +97,11 @@
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "semver": "^5.7.1",
-    "send": "^0.18.0",
+    "send": "^1.1.0",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.4",
-    "simple-update-notifier": "^1.1.0",
-    "sodium": "^3.0.2",
+    "simple-update-notifier": "^2.0.0",
     "statuses": "^2.0.1",
     "streamsearch": "^1.1.0",
     "string_decoder": "^1.3.0",
