--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "negotiator": "^0.6.3",
     "node-domexception": "^1.0.0",
     "node-fetch": "^3.3.0",
+    "node-vibrant": "^3.0.0",
     "nodemon": "^3.1.7",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.12.3",
@@ -121,6 +122,7 @@
     "util-deprecate": "^1.0.2",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
+    "vibrant": "^0.0.1",
     "web-streams-polyfill": "^3.2.1",
     "ws": "^8.12.0",
     "xmlhttprequest": "^1.8.0",
